# Bag-classifier

./: .gitignore  LICENCE  README.md  pyproject.toml
.github/workflows/: run-tests.yaml
src/app/: application_starter.py  constants.py  hypotheses_proofing_starter.py  hypotheses_verification_starter.py
src/app/bag_classifier/: classifier.py  constants.py
src/app/bag_classifier/hypotheses/: hypotheses.py  hypotheses_tests.py  hypotheses_verification.py  verification.md
src/app/bag_classifier/loader/: dataset_loader.py
src/app/bag_classifier/stats/: classifier_estimator.py  estimation.md
src/app/bag_classifier/utils/: classifier_utils.py  images_utils.py
src/app/loader/: dataset_loader.py
src/app/logging/: logger_settings.py
src/app/view/: bag_classifier.py  constants.py
src/app/view/api/: classifier.py
tests/test_app/test_bag_classifier/: test_classifier.py
tests/test_app/test_bag_classifier/test_utils/: test_classifier_utils.py  test_image_utils.py
tests/test_app/test_loader/: test_dataset_loader.py
tests/test_app/test_view/test_api/: test_classifier.py
